# p33_django

./: .env.example  .gitignore  Makefile  TODO  pyproject.toml
apps/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/migrations/: 0001_initial.py  0002_alter_category_options.py  0002_alter_product_discount_price.py  0002_blogcategory_blog.py  0003_alter_blog_created_by.py  0003_alter_product_options_alter_user_phone.py  0003_group.py  0004_blog_archived_alter_blog_category.py  0004_rename_name_group_charfield_group_bigintfield_and_more.py  0005_alter_blog_description.py  0005_remove_group_filepathfield.py  0006_alter_blog_options_blog_is_premium.py  0006_alter_group_type.py  0007_blog_price.py  0007_group_slugfield.py
apps/models/: __init__.py  base.py  blogs.py  products.py  users.py
root/: celery.py  settings.py  urls.py
templates/apps/: base.html  main.html  product-detail.html  product-list.html
templates/apps/auth/: base.html  email_verification.html  login.html  profile.html  register.html
templates/apps/blogs/: blog-detail.html  blog.html
templates/apps/parts/: footers.html  headers.html
templates/apps/products/: product-detail.html  product.html
